fix: fixed primary colour for accessibility contrast compliance

--- a/src/style.css
+++ b/src/style.css
@@ -54,7 +54,7 @@
   --fontSize-5: 2.074rem;
   --fontSize-6: 2.488rem;
   --fontSize-7: 2.986rem;
-  --color-primary: #96a6e0;
+  --color-primary: #a5afe4;
   --color-text: #ffffff;
   --color-text-light: #f2f2f2;
   --color-heading: #ffffff;
